// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render selected RadioButton 1`] = `
<RadioButton
  checked={true}
>
  <Checkbox
    checked={true}
    checkedIcon={
      <RadioChecked
        className="css-17u2540"
      />
    }
    disabled={false}
    label={null}
    labelPosition="left"
    onCheck={[Function]}
    uncheckedIcon={
      <RadioUnchecked
        className="css-1gf5nsk"
      />
    }
  >
    <div
      aria-hidden={true}
      className=""
      onClick={[Function]}
    >
      <RadioChecked
        className="css-17u2540"
      >
        <Icon
          className="css-17u2540"
          color={null}
          content="<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb css-17u2540"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </RadioChecked>
    </div>
  </Checkbox>
</RadioButton>
`;

exports[`RadioButton should render unselected RadioButton 1`] = `
<RadioButton>
  <Checkbox
    checkedIcon={
      <RadioChecked
        className="css-17u2540"
      />
    }
    disabled={false}
    label={null}
    labelPosition="left"
    onCheck={[Function]}
    uncheckedIcon={
      <RadioUnchecked
        className="css-1gf5nsk"
      />
    }
  >
    <div
      aria-hidden={true}
      className=""
      onClick={[Function]}
    >
      <RadioUnchecked
        className="css-1gf5nsk"
      >
        <Icon
          className="css-1gf5nsk"
          color={null}
          content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb css-1gf5nsk"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </RadioUnchecked>
    </div>
  </Checkbox>
</RadioButton>
`;
